--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial scale=1">
   <title>Module 2 Assignment</title>
@@ -22,7 +23,7 @@
   </div>
   <div class="col-lg-4 col-md-6">
     <div class="box">
-      <div class="box-title">
+      <div class="box-title blue">
         Fish
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis reiciendis dolore, quod ipsa, quibusdam in a aspernatur ea, beatae ullam voluptatum nulla nam. Doloremque sunt eum consequatur, assumenda sequi facilis.
@@ -31,7 +32,7 @@
   </div>
   <div class="col-lg-4 col-md-6">
     <div class="box">
-    <div class="box-title">
+    <div class="box-title violet">
       Beef
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptate, ratione consequuntur id cum eum temporibus hic, corrupti error amet necessitatibus vero asperiores aliquid eos in, pariatur deserunt facere dolor!</p>
